# bob

./: .gitignore  .ocamlformat  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  bob-com.opam  bob-web.opam  bob.opam  com.opam  dune-project  dune-workspace  link.sh
.github/workflows/: esperanto.yml
dict/: dict.ml  dune  en.dict  generate.ml
files/: esperanto.patch
lib/: bob.c  bob.ml  bob.mli  bob_carton.ml  bob_carton.mli  bob_dns.ml  bob_dns.mli  bob_fpath.ml  bob_fpath.mli  bob_happy_eyeballs.ml  bob_happy_eyeballs.mli  bob_socks.ml  bob_socks.mli  bob_tls.ml  bob_tls.mli  bob_unix.ml  bob_unix.mli  crypto.ml  crypto.mli  dune  extract.ml  extract.mli  fiber.ml  fiber.mli  generate.ml  generate.mli  git.ml  git.mli  handshake.ml  handshake.mli  json.ml  json.mli  pack.ml  pack.mli  password.ml  password.mli  protocol.ml  protocol.mli  qe.ml  qe.mli  (+10 more)
lib/protocol/: bob_protocol.ml  capability.ml  capability.mli  decoder.ml  decoder.mli  dune  encoder.ml  encoder.mli  machine.ml  metadata.ml  protocol.ml  protocol.mli  resume.ml  resume.mli  state.ml
mirage/: config.ml  unikernel.ml
test/: .bob.t.swp  bob.t  cat.t  connect.t  dune  free.ml  handshake.ml  machine.ml  protocol.ml  resume.ml  sched.ml
web/: dune  index.md  syndication.ml
