opam-version: "2.0"
name:         "bob"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/bob"
bug-reports:  "https://github.com/dinosaure/bob/issues"
dev-repo:     "git+https://github.com/dinosaure/bob.git"
doc:          "https://dinosaure.github.io/bob/"
license:      "MIT"
synopsis:     "A peer-to-peer file-transfer tool"

build: [ "dune" "build" "bin/bob.com" "-j" jobs ]
install: [
  [ "cp" "bin/bob.com" "%{bin}%/bob.com" ]
  [ "strip" "%{bin}%/bob.com" ]
]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"          { build & >= "4.13.0" & < "5.0.0" }
  "dune"           { ?monorepo & >= "2.8.0" }
  "fmt"            { ?monorepo & >= "0.9.0" }
  "hxd"            { ?monorepo & >= "0.3.2" }
  "logs"           { ?monorepo & >= "0.7.0" }
  "bheap"          { ?monorepo & >= "2.0.0" }
  "base64"         { ?monorepo & >= "3.5.0" }
  "decompress"     { ?monorepo & >= "1.5.1" }
  "digestif"       { ?monorepo & >= "1.1.3" }
  "opam-monorepo"  { build }
  "esperanto"      { build }
  "bigstringaf"    { ?monorepo }
  "cmdliner"       { ?monorepo }
  "ipaddr"         { ?monorepo }
  "mirage-crypto"  { ?monorepo }
  "psq"            { ?monorepo }
  "lru"            { ?monorepo & <= "0.3.0" }
  "tls"            { ?monorepo }
  "carton"         { ?monorepo & >= "0.5.0" }
  "progress"       { ?monorepo }
  "dns-client"     { ?monorepo }
  "happy-eyeballs" { ?monorepo }
  "ca-certs"       { ?monorepo }
  "ke"             { ?monorepo & >= "0.6" }
  "alcotest"       { with-test }
  "spoke"          { ?monorepo }
]

pin-depends: [
  [ "mirage-crypto.dev" "git+https://github.com/dinosaure/mirage-crypto.git#aa16c7ca4adb6a1274aec90b7f966e9da668756b" ]
  [ "mirage-crypto-pk.dev" "git+https://github.com/dinosaure/mirage-crypto.git#aa16c7ca4adb6a1274aec90b7f966e9da668756b" ]
  [ "mirage-crypto-ec.dev" "git+https://github.com/dinosaure/mirage-crypto.git#aa16c7ca4adb6a1274aec90b7f966e9da668756b" ]
  [ "mirage-crypto-rng.dev" "git+https://github.com/dinosaure/mirage-crypto.git#aa16c7ca4adb6a1274aec90b7f966e9da668756b" ]
]

x-mirage-opam-lock-location: "bob-com.opam.locked"
x-mirage-configure: [
  "sh" "-exc" "$(eval opam env) env OPAMVAR_monorepo='opam-monorepo' opam monorepo lock --require-cross-compile --build-only --ocaml-version $(ocamlc --version) bob-com" ]
x-mirage-pre-build: [
  "sh" "-exc" "$(eval opam env) env OPAMVAR_monorepo='opam-monorepo' opam monorepo pull"
]
x-mirage-extra-repo: [
  [ "opam-overlays" "https://github.com/dune-universe/opam-overlays.git" ]
  [ "mirage-overlays" "https://github.com/dune-universe/mirage-opam-overlays.git" ]
]
x-opam-monorepo-opam-provided: ["ocaml" "opam-monorepo" "esperanto"]

url { src: "git+https://github.com/dinosaure/bob.git#reproducible-build" }
