opam-version: "2.0"
name:         "bob"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/bob"
bug-reports:  "https://github.com/dinosaure/bob/issues"
dev-repo:     "git+https://github.com/dinosaure/bob.git"
doc:          "https://dinosaure.github.io/bob/"
license:      "MIT"
synopsis:     "A peer-to-peer file-transfer tool"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.13.0"}
  "dune"        {>= "2.8.0"}
  "fmt"         {>= "0.9.0"}
  "hxd"         {>= "0.3.2"}
  "logs"        {>= "0.7.0"}
  "bheap"       {>= "2.0.0"}
  "base64"      {>= "3.5.0"}
  "decompress"  {>= "1.5.1"}
  "bigstringaf"
  "cmdliner"
  "ipaddr"
  "mirage-crypto"
  "psq"
  "tls"
  "carton"      {>= "0.5.0"}
  "progress"
  "dns-client"
  "happy-eyeballs"
  "ca-certs"
  "ke"          {>= "0.6"}
  "alcotest"    {with-test}
  "spoke"
]

pin-depends: [
  [ "spoke.dev" "git+https://github.com/dinosaure/spoke.git#61f4e785d22d6002fd396862f75f515355197002" ]
  [ "digestif.dev" "git+https://github.com/mirage/digestif.git#2e6a40f8b6839dba40965b077d77ba540fc40715" ]
  [ "mirage-crypto.dev" "git+https://github.com/dinosaure/mirage-crypto.git#aa16c7ca4adb6a1274aec90b7f966e9da668756b" ]
  [ "mirage-crypto-pk.dev" "git+https://github.com/dinosaure/mirage-crypto.git#aa16c7ca4adb6a1274aec90b7f966e9da668756b" ]
  [ "mirage-crypto-ec.dev" "git+https://github.com/dinosaure/mirage-crypto.git#aa16c7ca4adb6a1274aec90b7f966e9da668756b" ]
  [ "mirage-crypto-rng.dev" "git+https://github.com/dinosaure/mirage-crypto.git#aa16c7ca4adb6a1274aec90b7f966e9da668756b" ]
]
