opam-version: "2.0"
name:         "bob"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/bob"
bug-reports:  "https://github.com/dinosaure/bob/issues"
dev-repo:     "git+https://github.com/dinosaure/bob.git"
doc:          "https://dinosaure.github.io/bob/"
license:      "MIT"
synopsis:     "A peer-to-peer file-transfer tool"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"             {>= "4.13.0"}
  "dune"              {>= "3.3.0"}
  "fmt"               {>= "0.9.0"}
  "hxd"               {>= "0.3.2"}
  "logs"              {>= "0.7.0"}
  "bheap"             {>= "2.0.0"}
  "base64"            {>= "3.5.0"}
  "decompress"        {>= "1.5.1"}
  "digestif"          {>= "1.1.3"}
  "bigstringaf"
  "cmdliner"
  "ipaddr"            {>= "5.3.0"}
  "mirage-crypto"
  "mirage-crypto-rng" {>= "0.11.0"}
  "x509"              {>= "0.16.0"}
  "psq"
  "tls"
  "carton"            {>= "0.5.0"}
  "progress"          {>= "0.2.1"}
  "dns-client"        {>= "6.4.0"}
  "happy-eyeballs"    {>= "0.4.0" & < "0.5.0"}
  "ca-certs"
  "ke"                {>= "0.6"}
  "alcotest"          {with-test}
  "spoke"             {>= "0.0.2"}
]
