opam-version: "2.0"
name:         "bob"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/bob"
bug-reports:  "https://github.com/dinosaure/bob/issues"
dev-repo:     "git+https://github.com/dinosaure/bob.git"
doc:          "https://dinosaure.github.io/bob/"
license:      "MIT"
synopsis:     "A peer-to-peer file-transfer tool"

build: [
  [ "dune" "build" "-x" "x86_64-esperanto" "-p" name "bin/bob.exe" "-j" jobs ]
  [ "dune" "build" "-x" "aarch64-esperanto" "-p" name "bin/bob.exe" "-j" jobs ]
  [ "sh" "link.sh" ]
]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"                  { build & >= "4.13.0" & < "5.0.0" }
  "dune"                   { >= "3.3.0" }
  "fmt"                    { >= "0.9.0" }
  "hxd"                    { >= "0.3.2" }
  "logs"                   { >= "0.7.0" }
  "bheap"                  { >= "2.0.0" }
  "base64"                 { >= "3.5.0" }
  "decompress"             { >= "1.5.1" }
  "digestif"               { >= "1.1.3" }
  "opam-monorepo"          { build }
  "esperanto-cosmopolitan" { build }
  "x86_64-esperanto"       { build }
  "aarch64-esperanto"      { build }
  "ocamlfind"              { build }
  "bigstringaf"
  "cmdliner"
  "ipaddr"                 { >= "5.3.0" }
  "mirage-crypto"
  "mirage-crypto-rng"      { >= "0.11.0" }
  "x509"                   { >= "0.16.0" }
  "psq"
  "lru"                    { >= "0.3.1" }
  "tls"
  "carton"                 { >= "0.5.0" }
  "progress"               { >= "0.2.1" }
  "dns-client"
  "happy-eyeballs"         { >= "0.6.0" }
  "ca-certs"
  "ke"                     { >= "0.6" }
  "alcotest"               { with-test }
  "spoke"                  { >= "0.0.2" }
]

pin-depends: [
  [ "mirage-crypto.dev" "git+https://github.com/dinosaure/mirage-crypto.git#83b160823cc601ffb19f8be2e32d643ffcbea60d" ]
  [ "mirage-crypto-pk.dev" "git+https://github.com/dinosaure/mirage-crypto.git#83b160823cc601ffb19f8be2e32d643ffcbea60d" ]
  [ "mirage-crypto-ec.dev" "git+https://github.com/dinosaure/mirage-crypto.git#83b160823cc601ffb19f8be2e32d643ffcbea60d" ]
  [ "mirage-crypto-rng.dev" "git+https://github.com/dinosaure/mirage-crypto.git#83b160823cc601ffb19f8be2e32d643ffcbea60d" ]
  [ "mtime.dev" "git+https://github.com/dinosaure/mtime.git#d5d70f38c40da90e3e173eb60346df55b64a4a0a" ]
  [ "gmp.dev" "git+https://github.com/mirage/ocaml-gmp.git#dfc83c74a327d848074ecf0d33b009eaf5625250" ]
]

x-mirage-opam-lock-location: "com.opam.locked"
x-mirage-configure: [
  "sh" "-exc" "$(eval opam env) env OPAMVAR_monorepo='opam-monorepo' opam monorepo lock --require-cross-compile --build-only --ocaml-version $(ocamlc --version) com" ]
x-mirage-pre-build: [
  "sh" "-exc" "$(eval opam env) env OPAMVAR_monorepo='opam-monorepo' opam monorepo pull"
]
x-mirage-extra-repo: [
  [ "opam-overlays" "https://github.com/dune-universe/opam-overlays.git" ]
  [ "mirage-overlays" "https://github.com/dune-universe/mirage-opam-overlays.git" ]
]
x-opam-monorepo-opam-provided: ["ocaml" "ocamlfind" "opam-monorepo" "esperanto-cosmopolitan" "x86_64-esperanto" "aarch64-esperanto"]

url { src: "git+https://github.com/dinosaure/bob.git" }
