opam-version: "2.0"
name:         "bob"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/bob"
bug-reports:  "https://github.com/dinosaure/bob/issues"
dev-repo:     "git+https://github.com/dinosaure/bob.git"
doc:          "https://dinosaure.github.io/bob/"
license:      "MIT"
synopsis:     "A peer-to-peer file-transfer tool"

build: [
  [ "dune" "build" "-x" "x86_64_esperanto" "-p" name "bin/bob.exe" "-j" jobs ]
  [ "dune" "build" "-x" "aarch64_esperanto" "-p" name "bin/bob.exe" "-j" jobs ]
  [ "sh" "-c" "apelink -o bob.com -l %{bin}%/ape-x86_64.elf -l %{bin}%/ape-aarch64.elf -M %{bin}%/ape-m1.c _build/default.x86_64_esperanto/bin/bob.exe.dbg _build/default.aarch64_esperanto/bin/bob.exe.dbg" ]
]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

install: [
  [ "cp" "bob.com" "%{bin}%/bob.com" ]
]

depends: [
  "ocaml"                  { build & >= "4.13.0" & < "5.0.0" }
  "dune"                   { >= "3.3.0" }
  "fmt"                    { >= "0.9.0" }
  "hxd"                    { >= "0.3.2" }
  "logs"                   { >= "0.7.0" }
  "bheap"                  { >= "2.0.0" }
  "base64"                 { >= "3.5.0" }
  "decompress"             { >= "1.5.1" }
  "digestif"               { >= "1.1.3" }
  "opam-monorepo"          { build }
  "esperanto-cosmopolitan" { build }
  "x86_64-esperanto"       { build }
  "aarch64-esperanto"      { build }
  "ocamlfind"              { build }
  "bigstringaf"
  "cmdliner"
  "ipaddr"                 { >= "5.3.0" }
  "mirage-crypto-rng"      { >= "2.0.0" }
  "x509"                   { >= "0.16.0" }
  "psq"
  "lru"                    { >= "0.3.1" }
  "tls"                    { >= "0.17.4" }
  "carton"                 { >= "1.0.0" }
  "progress"               { >= "0.2.1" }
  "dns-client"
  "happy-eyeballs"         { >= "0.6.0" }
  "ca-certs"
  "eqaf"                   {< "0.10"}
  "ke"                     { >= "0.6" }
  "alcotest"               { with-test }
  "spoke"                  { >= "0.0.3" }
]

pin-depends: [
    [ "spoke.dev" "git+https://github.com/dinosaure/spoke.git#eda61bb0c2671f3eaaac9f0f0ffa8423b3e63c98" ]
    [ "mirage-crypto.2.0.0" "git+https://github.com/dinosaure/mirage-crypto.git#24e20a0681b221954f7bac9dc76559007aaeb09a" ]
    [ "mirage-crypto-pk.2.0.0" "git+https://github.com/dinosaure/mirage-crypto.git#24e20a0681b221954f7bac9dc76559007aaeb09a" ]
    [ "mirage-crypto-ec.2.0.0" "git+https://github.com/dinosaure/mirage-crypto.git#24e20a0681b221954f7bac9dc76559007aaeb09a" ]
    [ "mirage-crypto-rng.2.0.0" "git+https://github.com/dinosaure/mirage-crypto.git#24e20a0681b221954f7bac9dc76559007aaeb09a" ]
#   [ "mtime.dev" "git+https://github.com/dinosaure/mtime.git#d5d70f38c40da90e3e173eb60346df55b64a4a0a" ]
#   [ "gmp.dev" "git+https://github.com/mirage/ocaml-gmp.git#90c7941b3b2649c19f2596538417e5ce1df61b9d" ]
]

x-mirage-opam-lock-location: "com.opam.locked"
x-mirage-configure: [
  "sh" "-exc" "$(eval opam env) env OPAMVAR_monorepo='opam-monorepo' opam monorepo lock --require-cross-compile --build-only --ocaml-version $(ocamlc --version) com" ]
x-mirage-pre-build: [
  "sh" "-exc" "$(eval opam env) env OPAMVAR_monorepo='opam-monorepo' opam monorepo pull"
]
x-mirage-extra-repo: [
  [ "opam-overlays" "https://github.com/dune-universe/opam-overlays.git" ]
  [ "mirage-overlays" "https://github.com/dune-universe/mirage-opam-overlays.git" ]
]
x-opam-monorepo-opam-provided: ["ocaml" "ocamlfind" "opam-monorepo" "esperanto-cosmopolitan" "x86_64-esperanto" "aarch64-esperanto"]

url { src: "git+https://github.com/dinosaure/bob.git" }

available: arch != "x86_32"
