(library
 (name stdbob)
 (public_name bob.std)
 (modules stdbob)
 (libraries ke))

(library
 (name bob)
 (public_name bob)
 (modules crypto state protocol bob)
 (libraries bob.std ke mirage-crypto hxd.core hxd.string logs spoke.core))

(library
 (name password)
 (public_name bob.password)
 (modules password)
 (libraries bob.dict))

(library
 (name fiber)
 (public_name bob.fiber)
 (modules fiber)
 (libraries bob.std fpath ke bheap logs unix))

(library
 (name temp)
 (public_name bob.temp)
 (modules temp)
 (libraries fmt fpath))

(library
 (name pack)
 (public_name bob.pack)
 (modules pack)
 (libraries bob.fiber bob.temp unix digestif carton))

(library
 (name bob_unix)
 (public_name bob.unix)
 (modules bob_unix)
 (libraries psq hxd.core hxd.string bob bob.fiber))
