(library
 (name stdbob)
 (public_name bob.std)
 (modules stdbob)
 (libraries ke))

(library
 (name bob_fpath)
 (public_name bob.fpath)
 (modules bob_fpath)
 (flags :standard -w -6-27-32-33-39)
 (libraries astring result))

(library
 (name bob)
 (public_name bob)
 (modules crypto state protocol bob)
 (libraries bob.std ke mirage-crypto hxd.core hxd.string logs spoke.core))

(library
 (name password)
 (public_name bob.password)
 (modules password)
 (libraries bob.dict))

(library
 (name fiber)
 (public_name bob.fiber)
 (modules fiber)
 (foreign_stubs
  (language c)
  (names bob))
 (libraries bob.std bob.fpath ke bheap logs unix))

(library
 (name stream)
 (public_name bob.stream)
 (modules stream)
 (libraries hxd.core hxd.string bob.fpath decompress.zl bob.std bob.fiber))

(library
 (name temp)
 (public_name bob.temp)
 (modules temp)
 (libraries fmt bob.fpath))

(library
 (name pack)
 (public_name bob.pack)
 (modules pack)
 (libraries bob.fiber bob.temp bob.stream cstruct unix digestif carton))

(library
 (name bob_unix)
 (public_name bob.unix)
 (modules bob_unix)
 (libraries psq hxd.core hxd.string bob bob.fiber))

(library
 (name bob_dns)
 (public_name bob.dns)
 (modules bob_dns)
 (libraries
  duration
  mtime
  mtime.clock.os
  dns
  dns-client
  ipaddr
  ipaddr.unix
  bob.fiber
  bob.tls
  mirage-crypto-rng.unix
  happy-eyeballs))

(library
 (name bob_tls)
 (public_name bob.tls)
 (modules bob_tls)
 (libraries tls cstruct bob.fiber))
