(library
 (name stdbob)
 (public_name bob.std)
 (modules stdbob)
 (libraries ke))

(library
 (name qe)
 (public_name bob.qe)
 (modules qe)
 (libraries logs fmt stdbob))

(library
 (name bob_fpath)
 (public_name bob.fpath)
 (modules bob_fpath)
 (flags :standard -w -6-27-32-33-39)
 (libraries astring result))

(library
 (name bob)
 (public_name bob)
 (modules crypto state handshake bob)
 (libraries bob.std bob.qe mirage-crypto hxd.core hxd.string logs spoke.core))

(library
 (name password)
 (public_name bob.password)
 (modules password)
 (libraries bob.dict))

(library
 (name fiber)
 (public_name bob.fiber)
 (modules fiber)
 (foreign_stubs
  (language c)
  (names bob))
 (libraries bob.std bob.fpath ke bheap logs unix))

(library
 (name stream)
 (public_name bob.stream)
 (modules stream)
 (libraries
  bob.qe
  hxd.core
  hxd.string
  bob.fpath
  decompress.zl
  digestif
  bob.std
  bob.fiber))

(library
 (name temp)
 (public_name bob.temp)
 (modules temp)
 (libraries fmt bob.fpath))

(library
 (name git)
 (public_name bob.git)
 (modules git)
 (libraries bob.fiber bob.stream cstruct digestif))

(library
 (name pack)
 (public_name bob.pack)
 (modules pack)
 (libraries
  bob.fiber
  bob.temp
  bob.stream
  bob.git
  cstruct
  unix
  digestif
  carton))

(library
 (name bob_unix)
 (public_name bob.unix)
 (modules bob_unix)
 (libraries psq hxd.core hxd.string bob bob.fiber))

(library
 (name bob_dns)
 (public_name bob.dns)
 (modules bob_dns)
 (libraries
  duration
  mtime
  mtime.clock.os
  dns
  dns-client
  ipaddr
  ipaddr.unix
  bob.fiber
  bob.tls
  mirage-crypto-rng.unix
  bob.happy-eyeballs))

(library
 (name bob_happy_eyeballs)
 (public_name bob.happy-eyeballs)
 (modules bob_happy_eyeballs)
 (libraries ipaddr.unix mtime.clock.os dns happy-eyeballs bob.fiber))

(library
 (name bob_tls)
 (public_name bob.tls)
 (modules bob_tls)
 (libraries tls cstruct bob.fiber))
