(cram
 (enabled_if
  (= %{context_name} "default"))
 (deps %{bin:bob} sched.exe free.exe ../bin/cat.exe))

(executable
 (name sched)
 (modules sched)
 (libraries fmt fpath unix))

(executable
 (name free)
 (modules free)
 (libraries unix))

(executable
 (name protocol)
 (modules protocol)
 (libraries logs.fmt fmt.tty bob alcotest))

(rule
 (alias runtest)
 (action
  (run ./protocol.exe --color=always)))
