(cram
 (enabled_if
  (= %{context_name} "default"))
 (deps %{bin:bob} sched.exe free.exe ../bin/cat.exe))

(executable
 (name sched)
 (modules sched)
 (libraries fmt fpath unix))

(executable
 (name free)
 (modules free)
 (libraries unix))

(executable
 (name handshake)
 (modules handshake)
 (libraries logs.fmt fmt.tty bob alcotest))

(rule
 (alias runtest)
 (action
  (run ./handshake.exe --color=always)))
